--- a/AtomTasks/AtomTasks/packages.config
+++ b/AtomTasks/AtomTasks/packages.config
@@ -18,5 +18,17 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.112.2" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.2" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.112.2" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.112.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
