--- a/AtomTasks/AtomTasks/AtomTasks.csproj
+++ b/AtomTasks/AtomTasks/AtomTasks.csproj
@@ -208,7 +208,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\UserTestView.cshtml" />
+    <Content Include="Views\Home\TestView.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
