--- a/AtomTasks/AtomTasks/Web.config
+++ b/AtomTasks/AtomTasks/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	 <add name="DefaultConnection" connectionString="Data Source=C:\Users\Андрей\source\repos\atomhack\AtomTasks\AtomTasks\App_Data\db.db" providerName="System.Data.SQLite" />
+	 <add name="DefaultConnection" connectionString="Data Source=|DataDirectory|db.db" providerName="System.Data.SQLite" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
