--- a/AtomTasks/AtomTasks/AtomTasks.csproj
+++ b/AtomTasks/AtomTasks/AtomTasks.csproj
@@ -190,6 +190,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="images\ball.png" />
+    <Content Include="images\coin2.gif" />
     <Content Include="images\MyIcon.png" />
     <Content Include="images\zarech.gif" />
     <Content Include="Scripts\bootstrap.js" />
